Fix alignment in position and add superfarm

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -175,6 +175,10 @@ h4 {
   }
 }
 
+.text-rtl {
+  direction: rtl;
+}
+
 @mixin row-fixed-col($width, $height, $padding) {
   position: relative;
   padding-left: $width + $padding;
